# stellarium

./: .appveyor.yml  .bzrignore  .bzrignore.orig  .clang-format  .clang-tidy  .coveralls.yml  .editorconfig  .gitattributes  .gitignore  .lgtm.yml  .project  .travis.yml  .typo-ci.yml  .whitesource  ABOUT-NLS  AUTHORS  AUTHORS.md  BACKERS.md  BUILDING.md  BootDebuggerFiles.ini  CHANGELOG.md  CHANGES-FROM-TRUNK.txt  CHECKLIST.yml  CITATION  CITATION.cff  CMakeLists.txt  CMakeLists.txt.orig  CONTRIBUTING.md  COPYING.md  CREDITS.md  ChangeLog  DEVELOPER_NOTES.md  Doxyfile  Doxyfile-plugins.cmake  Doxyfile.cmake  GPL.txt  INSTALL  INSTALL.md  MAINTAINER_BUSINESS.md  Makefile  (+57 more)
data/: CMakeLists.txt  Icon.icns  IconGray.icns  Info.plist  Info.plist.cmake  Makefile  Makefile.am  Makefile.in  PkgInfo  Stellarium.entitlements  arial.txt  asteroid_elements.json  asteroid_ephemeris.json  base_cities.txt  base_locations.bin.gzip  base_locations.txt  cardinals.dut.fab  cardinals.eng.fab  cardinals.esl.fab  cardinals.fra.fab  cardinals.nor.fab  catalog.fab  cities.fab  cities_Earth.fab  cities_Mars.fab  cities_Moon.fab  cities_Venus.fab  constellationsart.fab  constellationship.fab  constellationsmaj.fab  courierfont.txt  default_addons.json  default_addons_0.14.0.json  default_addons_0.15.json  default_config.ini  default_config.ini.cmake  default_config_dome.ini  default_shortcuts.json  files_format.txt  hipparcos.fab  (+66 more)
data/gui/: CMakeLists.txt  baseMap_compressed.svgz  btFullScreen-managed.xcf  guiRes.qrc  nightHtml.css  nightStyle.css  normalHtml.css  normalStyle.css  skyCultureWorldMap.svgz
data/maemo/: stellarium.desktop
data/nomenclature/: moon.fab
data/planet_surface_nomenclature/: surface_nomenclature.fab
data/qml/: Bars.qml  BottomBar.qml  ConfigurationDialog.qml  ConfigurationDialogInformation.qml  ConfigurationDialogMain.qml  ConfigurationDialogNavigation.qml  ConfigurationDialogTools.qml  DateTimeDialog.qml  InfoPanel.qml  StelActionButton.qml  StelCheckBox.qml  StelComboBox.qml  StelDateEdit.qml  StelGradient.qml  StelGroup.qml  StelItem.qml  StelLatLonEdit.qml  StelRadioButton.qml  StelSlider.qml  StelSpinBox.qml  StelTab.qml  StelTabView.qml  StelTableView.qml  StelTextField.qml  StelTextView.qml  StelVSpinBox.qml  StelWindow.qml  ViewDialog.qml  ViewDialogLandscape.qml  ViewDialogMarkings.qml  ViewDialogSky.qml  ViewDialogStarlore.qml  WinBar.qml  main.qml  qmlRes.qrc
data/scripts/: CMakeLists.txt  Makefile.am  lunar_eclipse_partial.sts  lunar_eclipse_total.sts  startup.sts
data/shaders/: CMakeLists.txt  atmosphere.vert  bmap.f.glsl  bmap.f.glsl1  bmap.v.glsl  bmap.v.glsl1  debug.f.glsl  debug.v.glsl  nmap.f.glsl  nmap.v.glsl  parallax.f.glsl  (+25 more)
doc/: CMakeLists.txt  DoxygenLayout.xml  DoxygenPluginsLayout.xml  HOWTO-compile-on-win32.txt  Makefile.am  builtinScriptFunctions.doxygen  codingConventions.doxygen  commands.html  developer_guide.html  developer_guide.tex  doc-header.html  doxygen.css  extrastyle.css  fileStructure.doxygen  fontfile.txt  gui.doxygen  interfaceMap.mm  mainpage-plugins.doxygen  mainpage.doxygen  plugIns.doxygen  renderer.doxygen  renderer.doxygen.THIS  scripting.doxygen  stellarium-ide.xml  stellarium.pod  stellarium.pod.cmake
landscapes/: CMakeLists.txt  Makefile.am
models/: 243ida_MLfix.obj.mtl  4vesta_21_MLfix.obj.mtl  951gaspra_MLfix.obj.mtl  CMakeLists.txt  j5amalthea_MLfix.obj.mtl  m1phobos.mtl  m1phobos.obj.gzip  m1phobos_21_MLfix.obj.mtl  m2deimos.mtl  m2deimos_21_MLfix.obj.mtl  n7larissa_MLfix.obj.mtl  n8proteus_MLfix.obj.mtl  s10janus_MLfix.obj.mtl  s11epimetheus_MLfix.obj.mtl  s16prometheus_MLfix.obj.mtl  s17pandora_MLfix.obj.mtl  s7hyperion_21_MLfix.obj.mtl
plugins/: CMakeLists.txt
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  af.po  ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  hw.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  (+29 more)
scripts/: BAS_Jupiter_Moons.ssc  BAS_Messier_Tour.ssc  CMakeLists.txt  GZ_videotest_MP4.ssc  GZ_videotest_MP4_extended.ssc  GZ_videotest_WMV.ssc  GZ_videotest_popout.ssc  GZ_videotest_popout_1.ssc  GZ_videotest_popout_2.ssc  Makefile.am  Planetary Alignment  analemma.ssc  bennett.ssc  best_ngc.ssc  binocular_highlights.ssc  binoculars_highlights.ssc  binosky.ssc  common_objects.inc  constellations_tour.ssc  double_stars.ssc  earth_1.ssc  earth_2.ssc  earth_3.ssc  earth_4.ssc  earth_5.ssc  earth_6.ssc  earth_7.ssc  h400_tour.ssc  i18n.inc  imagemgr.ssc  labels.ssc  landscapes.ssc  largest_known_stars.ssc  lunar_partial.ssc  lunar_total.ssc  martian_analemma.ssc  messier_marathon.ssc  messier_tour.ssc  modern_constellations_tour.ssc  morsels_1.ssc  (+30 more)
sip/: CMakeLists.txt  FindLibPython.py  FindPyQt.py  FindPyQt4.cmake  FindPythonLibrary.cmake  FindSIP.cmake  FindSIP.py  PyStellarium.sip  PythonMacros.cmake  SIPMacros.cmake  StelApp.sip  main.py  print_status.cmake
skycultures/: CMakeLists.txt  TODO.txt  common_dso_names.fab  common_star_names.fab  extract.sh  greek_farnese  po4a.config  translate.sh  translations.fab  translations_skycultures.fab  update-common-names.py  update-skycultures.py
src/: AstroImage.cpp  AstroImage.h  AstroImage.hpp  Atmosphere.cpp  Atmosphere.hpp  CLIProcessor.cpp  CLIProcessor.hpp  CMakeLists.txt  CeguiGui.cpp  CeguiGui.hpp  Constellation.cpp  Constellation.h  Constellation.hpp  ConstellationMgr.cpp  ConstellationMgr.hpp  ConvexPolygonCollection.h  CustomProjector.cpp  CustomProjector.hpp  CylinderProjector.cpp  CylinderProjector.hpp  EqualAreaProjector.cpp  EqualAreaProjector.hpp  FisheyeProjector.cpp  FisheyeProjector.hpp  GeodesicGrid.cpp  GeodesicGrid.hpp  GeodesicGridDrawer.cpp  GeodesicGridDrawer.h  Grid.cpp  Grid.hpp  GridLinesMgr.cpp  GridLinesMgr.h  GridLinesMgr.hpp  Landscape.cpp  Landscape.hpp  LandscapeMgr.cpp  LandscapeMgr.h  LandscapeMgr.hpp  LoadingBar.cpp  LoadingBar.hpp  (+312 more)
textures/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  TestSquare.tif  cometComa.tif  cometTail.tif  neb_ocln.tif
(+8902 files in other folders)
